--- a/security-modules/cas/cas-secured-app/pom.xml
+++ b/security-modules/cas/cas-secured-app/pom.xml
@@ -13,7 +13,11 @@
         <artifactId>cas</artifactId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-
+<properties>
+  <sonar.core.codeCoveragePlugin>jacoco</sonar.core.codeCoveragePlugin>
+  <sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+  <sonar.language>java</sonar.language>
+</properties>
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
